# rust-minivm

./: .gitignore  Cargo.toml  LICENSE  build.rs  main.vasm
src/: lib.rs
src/asm/: opcode.rs
src/common/: bytes.rs  config.rs  interner.rs  macros.rs  mod.rs
src/compile/: assembler.rs  bytecode.rs  debug.rs  error.rs  hir.rs  lower_ast.rs  mod.rs
src/hir/: error.rs  jumps.rs  lower_ast.rs  mod.rs  register_use.rs  repr.rs  tracing.rs  visit.rs
src/lir/: lower_hir.rs  repr.rs
src/mir/: lower_hir.rs  mod.rs  repr.rs  visit.rs
src/mir/lower_hir/: fold_constants.rs  mod.rs  patch_addrs.rs  registers.rs
src/parse/: ast.rs  error.rs  grammar.lalrpop  lexer.rs  mod.rs  parser.rs
src/vm/: debug.rs  error.rs  gc.rs  lower_lir.rs  lower_mir.rs  mod.rs  opcode.rs  run.rs  stack.rs  tracing.rs  value.rs
tests/: fib35.rs  runtime_errors.rs
tests/utils/: mod.rs
