[package]
name = "rust-minivm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = 1

[dependencies]
clap = { version = "3.2", features = ["derive"] }
codespan-reporting = "0.11"
lalrpop-util = "0.19"
lasso = "0.6"
logos = "0.12"
rustc-hash = "1.1"
smallvec = "1.9"
text-size = "1.1"

[build-dependencies]
lalrpop = "0.19"

[dev-dependencies]
expect-test = "1.4"